# ptreport

./: README.md  pyproject.toml
data/share/man/man1/: ptreport.1
ptreport/: __init__.py  __main__.py
